# ThreadsVault-desktop

./: .gitignore  LICENSE  README.md  README_english-version.md  README_spanish-version.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/2402/: pbl-graphql-video.md  pbl-tauri-build-errors.md  pbl-video-embed.md  sesion-completa.md
docs/exports/: 2026-02-27-codex.md
docs/plans/: 2026-02-27-desktop-video-resolution-design.md  2026-02-27-desktop-video-resolution.md  2026-02-27-threadsvault-desktop-design.md  2026-02-27-threadsvault-desktop.md
scripts/: doctor-node-spawn.cjs  doctor-release.cjs  patch-vite-windows-eperm.cjs  regression-post-extractor.cjs  test-local-fonts.mjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: CategoryBadge.svelte  CategoryManager.svelte  EmptyState.svelte  LoadingSpinner.svelte  PostCard.svelte
src/lib/: devAvatar.ts  i18n.ts  types.ts
src/lib/components/: NotFound.svelte
src/lib/storage/: adapter.ts  backup-normalizer.ts  dexie.ts  index.ts  sqlite.ts
src/lib/stores/: vault.ts
src/lib/utils/: desktop-video.ts  media-cache.ts  post-extractor.ts  url-parser.ts
src/routes/: CategoryScreen.svelte  PostDetailScreen.svelte  SettingsScreen.svelte  ShareScreen.svelte  VaultScreen.svelte
src/styles/: local-fonts.css
