[package]
name = "threadsvault-desktop"
version = "0.0.0"
description = "ThreadsVault desktop shell"
authors = ["ThreadsVault"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2" }
